--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <!--    <color name="colorPrimary">#6200EE</color>-->
+    <!--    <color name="colorPrimaryDark">#3700B3</color>-->
+    <!--    <color name="colorAccent">#03DAC5</color>-->
+
+    <color name="colorPrimary">#2D4E73</color>
+    <color name="colorPrimaryDark">#2D4E73</color>
+    <color name="colorAccent">#2D4E73</color>
+    <color name="ic_launcher_background">#2D4E73</color>
+    <color name="red">#FF0000</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
