--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="navigationViewMapStyle">https://images.vietbando.com/Style/vt_vbddefault/306ec9b5-8146-4a83-9271-bd7b343a574a</item>
+        <item name="navigationViewMapStyle">
+            https://images.vietbando.com/Style/vt_vbddark/306ec9b5-8146-4a83-9271-bd7b343a574a
+        </item>
     </style>
+
+
+    <style name="MyNavigationDark" parent="NavigationViewDark" />
+
+    <style name="MyNavigationLight" parent="NavigationViewLight" />
 
 </resources>
