--- a/map_navigation_ui/src/main/res/layout-land/instruction_layout.xml
+++ b/map_navigation_ui/src/main/res/layout-land/instruction_layout.xml
@@ -154,6 +154,7 @@
         android:id="@+id/soundLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instructionLayoutText" />
 
