--- a/map_navigation_ui/src/main/res/layout/instruction_view_layout.xml
+++ b/map_navigation_ui/src/main/res/layout/instruction_view_layout.xml
@@ -64,6 +64,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         android:layout_marginBottom="8dp" />
 
 </RelativeLayout>
